hydra_engine_blazor/Components/ElemComponent.razor.css
/* ... */
.elem-container>.param-name-container{
    max-width: 200px;
}
.elem-container{
    display: flex;
    flex-direction: row;
    gap:10px;
    align-items: center;
    max-width: 100%;
}
.elem-container>.position-relative{
    min-width: 240px;
}
.elem-reverse{
    flex-direction: row-reverse !important;
}
.read-only{
    pointer-events: none;
}
fieldset>legend{
    display: flex;
    align-items: center;
    gap:10px;
    text-wrap: nowrap;
    margin:0;
}
fieldset{
    width: 100%;
}
fieldset>legend>h3{
    font-weight: 600;
}
.add-item{
    content:url("icons/add_item.svg");
    cursor: pointer;
    width: 24px;
    height: 24px;
    border-radius: 4px;
}
.active-toggle{
    position: relative;
    display: inline-block;
    width: 18px;
    min-width: 18px;
    height: 10px;
    margin: 0;
    vertical-align: top;
    background: #ffffff;
    border: 1px solid #B7BDD0;
    border-radius: 30px;
    outline: none;
    cursor: pointer;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
}
.active-toggle::after{
    content: "";
    display: inline-block;
    position: absolute;
    left: 1px;
    right: 1px;
    top: 1px;
    bottom: 1px;
    width: 6px;
    height: 6px;
    background-color: var(--hydra-gray-200);
    border-radius: 50%;
    transform: translateX(0);
    transition: all 0.3s cubic-bezier(0.2, 0.85, 0.32, 1.2);
}
.active-toggle:checked::after {
    transform: translateX(100%);
    left: 4px;
    background-color: #fff;
}
.active-toggle:checked {
    background-color: var(--hydra-blue-500-primary);
    border:1px solid var(--hydra-blue-500-primary);
}
.active-toggle[disabled]:checked{
    background: var(--hydra-gray-50);
}
.active-toggle[disabled]{
    background: var(--hydra-gray-30);
    border: 1px solid var(--hydra-gray-50)
}
input[type="checkbox"]:not(.active-toggle){
    width: 18px !important;
    height: 18px;
    appearance: none;
    border-radius: 4px;
    background: white;
    border:1px solid var(--hydra-gray-200);
    position: relative;
}
input[type="checkbox"]:not(.active-toggle)[disabled]{
    background: var(--hydra-gray-30) !important;
    border:1px solid var(--hydra-gray-50) !important;
}
input[type="checkbox"]:not(.active-toggle)[disabled]:checked{
    background: var(--hydra-gray-50) !important;
}
input[type="checkbox"]:not(.active-toggle):checked{
    background: var(--hydra-blue-500-primary);
    border:1px solid var(--hydra-blue-500-primary);
}
input[type="text"],input[type="password"],input[type="number"],input[type="datetime-local"],input[type="date"],input[type="time"],textarea{
    background: var(--hydra-background-white);
    min-width: 240px;
    height: 32px;
    border: 1px solid var(--hydra-gray-100);
    padding: 5px 10px;
    border-radius: 8px;
}
input[type="checkbox"]:not(.active-toggle)::before {
    content: ''; 
    position: absolute; 
    top: calc(50% - 1px); 
    left: 50%;
    transform: translate(-50%, -50%) rotate(-45deg);
    width: 11px;
    height: 5px;
    transform-origin: center;
    border-color: transparent;
}
input[type="checkbox"]:not(.active-toggle):checked::before {
    border-left: 2px solid white;
    border-bottom: 2px solid white;
}
input[type="text"]:hover,input[type="password"]:hover,input[type="number"]:hover,input[type="datetime-local"]:hover,input[type="date"]:hover,input[type="time"]:hover,textarea:hover{
    border:1px solid var(--hydra-gray-500);
}
input[type="text"]:focus,input[type="password"]:focus,input[type="number"]:focus,input[type="datetime-local"]:focus,input[type="date"]:focus,input[type="time"]:focus,textarea:focus{
    border: 1px solid var(--hydra-blue-700)
}
input[type="text"]:disabled,input[type="password"]:disabled,input[type="number"]:disabled,input[type="datetime-local"]:disabled,input[type="date"]:disabled,input[type="time"]:disabled,textarea:disabled{
    border: 1px solid var(--hydra-gray-100);
    background: linear-gradient(0deg, var(--hydra-gray-20), var(--hydra-gray-20));
    color: var(--hydra-gray-400);

}
input[type="text"][validation-error],input[type="password"][validation-error],input[type="number"][validation-error],input[type="datetime-local"][validation-error],input[type="date"][validation-error],input[type="time"][validation-error],textarea[validation-error]{
    border:1px solid var(--hydra-error-500);
}
textarea{
    background: var(--hydra-background-white);
    min-width: 500px;
    min-height: 50px;
    padding: 5px 10px;
    border-radius: 8px;
    outline: none;
    display: inherit;
    max-height: 300px;
}
.validation-message{
    color:var(--hydra-error);
    font-size: 12px;
    display: block;
    position: absolute;
}
.hide-message{
    display: none;
}
.list-item-container{
    display: flex;
    flex-direction: row;
    gap:5px;
    align-items: center;
}
.delete-image{
    width: 24px;
    height: 24px;
}
.range-titles-container{
    display: flex;
    flex-direction: row;
    gap: 210px;
    padding: 0 0 0 10px;
    margin-bottom: -10px;
}
input,textarea:invalid{
    border:1px solid var(--hydra-error);
}
.delete-elem{
    content: url("icons/remove_item.svg");
    cursor: pointer;
    height: 24px;
    width: 24px;
}
@media(max-width: 1200px){
    .elem-container{
        flex-direction: column;
        align-items: flex-start;
    }
}
.arrow-down-img{
    content: url("icons/arrow_down.svg");
    cursor: pointer;
    height: 24px;
    width: 24px;
}
li>div>div>img[data-bs-toggle="collapse"]{
    margin-top: 7px;
}
.arrow-down-img[aria-expanded="false"]{
    transform: rotate(-90deg);
}
.arrow-down-img[aria-expanded="true"]{
    transform: rotate(0);
}
.nested-element{
    display: flex;
    flex-direction: column;
    gap: 10px;
    margin-left: 20px;
}
.elements-container{
    display: flex;
    flex-direction: column;
    gap:10px;
    padding: 10px 10px 10px 20px;
    border-radius: 8px;
    transition: background 0.3s ease;
    position: relative;
    min-height: 40px;
}
/* ... */

